feat: — реализовала в классе KVTaskClient метод getAPI_KEY для регистрации через http
fix:
— доработала тесты HttpTaskServerTest и HttpTaskServer, все тесты выполняются без ошибок
— доработала метод load и save класса HTTPTaskManager, теперь все данные выгружаются с сервера корректно (если задача удалена, то она тоже удаляется на сервере).
— доработала в классе KVServer метод load: добавила статусы ответов
— доработала в классе HttpTaskServer методы: добавила статусы ответов если запрос не был обработан со статусом 200